--- a/package.json
+++ b/package.json
@@ -10,24 +10,24 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "@fortawesome/fontawesome-free": "^5.8.2",
-        "axios": "^0.18.0",
+        "@fortawesome/fontawesome-free": "^5.9.0",
+        "axios": "^0.18.1",
         "bootstrap": "^4.1.0",
         "cross-env": "^5.1",
         "jquery": "^3.2",
-        "laravel-mix": "^4.0.7",
-        "lodash": "^4.17.5",
+        "laravel-mix": "^4.1.2",
+        "lodash": "^4.17.14",
         "popper.js": "^1.12",
         "resolve-url-loader": "^2.3.1",
-        "sass": "^1.15.2",
+        "sass": "^1.22.4",
         "sass-loader": "^7.1.0",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
         "roboto-fontface": "^0.10.0",
-        "vue-router": "^3.0.6",
-        "vuetify": "^1.5.14",
-        "vuex": "^3.1.0"
+        "vue-router": "^3.0.7",
+        "vuetify": "^2.0.0-beta.7",
+        "vuex": "^3.1.1"
     }
 }
