--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
         "popper.js": "^1.12",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.22.4",
-        "sass-loader": "^7.1.0",
+        "sass-loader": "^7.2.0",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
         "roboto-fontface": "^0.10.0",
-        "vue-router": "^3.0.7",
-        "vuetify": "^2.0.0-beta.7",
+        "vue-router": "^3.1.2",
+        "vuetify": "^2.0.5",
         "vuex": "^3.1.1"
     }
 }
