--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "roboto-fontface": "^0.10.0",
+    "vue-croppa": "^1.3.8",
     "vue-router": "^3.0.7",
     "vuetify": "^2.0.0-beta.7",
     "vuex": "^3.1.1"
