--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "sass": "^1.22.4",
         "sass-loader": "^7.1.0",
         "vue": "^2.5.17",
+        "vue-router-user-roles": "^0.1.92",
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
