--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,15 @@
         "php": "^7.1.3",
         "afipsdk/afip.php": "^0.5.4",
         "barryvdh/laravel-dompdf": "^0.8.4",
+        "beyondcode/laravel-websockets": "^1.2",
         "fideloper/proxy": "^4.0",
         "intervention/image": "^2.5",
         "laravel/framework": "5.8.*",
         "laravel/passport": "^7.2",
         "laravel/tinker": "^1.0",
         "laraveles/spanish": "^1.2",
-        "picqer/php-barcode-generator": "^0.3.0"
+        "picqer/php-barcode-generator": "^0.3.0",
+        "pusher/pusher-php-server": "~3.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
