--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "laravel-echo": "^1.5.4",
+        "pusher-js": "^5.0.0",
         "roboto-fontface": "^0.10.0",
         "vue-croppa": "^1.3.8",
         "vue-router": "^3.0.7",
